--- a/css/iperspace.webflow.css
+++ b/css/iperspace.webflow.css
@@ -253,7 +253,7 @@ a {
   -webkit-transition: text-indent 500ms cubic-bezier(.165, .84, .44, 1);
   transition: text-indent 500ms cubic-bezier(.165, .84, .44, 1);
   font-family: 'Circularpro book', sans-serif;
-  color: #fff;
+  color: rgb(206, 206, 206);
   font-size: 14px;
   font-weight: 400;
   text-align: center;
@@ -271,7 +271,7 @@ a {
   border-style: none;
   border-bottom-width: 1px;
   border-bottom-color: #fff;
-  color: #fff;
+  color: rgb(80, 80, 80);
   text-align: center;
   letter-spacing: 1px;
 }
@@ -327,7 +327,7 @@ a {
 
 .text-block {
   font-family: 'Circularpro book', sans-serif;
-  color: #fff;
+  color: rgb(206, 206, 206);
   font-size: 16px;
   line-height: 60px;
   font-weight: 400;
@@ -801,7 +801,7 @@ a {
 .images-full.xtra9 {
   position: relative;
   height: 800px;
-  background-image: url('../images/xtra9.png'), url('../images/bg-blue.png');
+  background-image: url('../images/work-endingbar.jpg');
   background-position: 50% 50%, 0px 0px;
   background-size: contain, 2256px;
   background-repeat: no-repeat, repeat;
@@ -1131,21 +1131,12 @@ a {
   top: 0px;
   width: 100%;
   height: 100%;
-  background-image: url('../images/decathlon.png');
+  background-image: url('../images/journey.jpg');
   background-position: 0px 0px;
   background-size: cover;
 }
 
-.image-hero-hdb {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  background-image: url('../images/hdb-header-min.jpg');
-  background-position: 50% 50%;
-  background-size: cover;
-}
+
 
 .image-hero-xtra {
   position: fixed;
@@ -1153,7 +1144,7 @@ a {
   top: 0px;
   width: 100%;
   height: 100%;
-  background-image: url('../images/eventoxtra-header.jpg');
+  background-image: url('../images/services.jpg');
   background-position: 50% 50%;
   background-size: cover;
 }
