--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,17 @@
 body {
-  font-family: "Inconsolata", monospace;
+  font-family: "Noto Sans TC", sans-serif;
   color: #0d1e2d;
+
+
 }
+#logo {
+  width: auto; 
+  height: 30px; 
+  padding-bottom: 6px;
+  
+
+}
+
 
 a {
   color: #777;
@@ -12,7 +22,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6, .font-heading {
-  font-family: "Raleway", sans-serif;
+  font-family: "Noto Sans TC", sans-serif;
 }
 
 .section {
@@ -42,7 +52,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 }
 
 .filters a.active {
-  color: #000;
+  color: rgba(0, 0, 0, 0.309);
 }
 
 .filters a.active:before {
@@ -66,7 +76,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   display: block;
   position: relative;
   overflow: hidden;
-  border-radius: 20px;
+  border-radius: 24px;
 }
 
 .item .item-wrap:after {
@@ -77,17 +87,20 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.665);
   visibility: hidden;
   opacity: 0;
   transition: .3s all ease-in-out;
   
 }
+.jumbotron {
+  background-color: #fff;
+}
 
 .item .item-wrap img {
   transition: .3s transform ease;
   transform: scale(1);
-  border-radius: 20px;
+  border-radius: 24px;
   
 }
 
