--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,6 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 
 .item {
   border: none;
-  margin-bottom: 10px;
   padding-right: 10px;
   padding-left: 10px;
 }
@@ -77,6 +76,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   position: relative;
   overflow: hidden;
   border-radius: 25px;
+  padding: 3px;
 }
 
 .item .item-wrap:after {
