--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,146 @@
+
 body {
-  font-family: "Noto Sans TC", sans-serif;
-  color: #0d1e2d;
-
-
+    font-family: "Noto Sans TC", sans-serif;
+    color: #0d1e2d;
+    background: linear-gradient(-45deg, #c1e6b8, #2b593e, #6cc2d1, #0b093f);
+    background-size: 400% 400%;
+    animation: gradient 10s ease infinite;
+    line-height: 1;
+    overflow-y: hidden;
+    
 }
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.loader {
+  height: 100%;
+  width: 100%;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+}
+
+@keyframes rotate {
+  from {
+    transform: translate(-50%, -50%) rotate(0);
+ }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+ }
+}
+.preloader {
+  height: 100vh;
+  width: 100vw;
+  background: #e0f8e8;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+}
+.preloader__wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 200px;
+}
+.preloader__circle {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  z-index: 99;
+  position: relative;
+  transition: 0.3s ease;
+}
+.preloader__circle-line {
+  animation: rotate 3.5s ease-in-out infinite;
+  border-top: 1px solid transparent;
+  border-left: 1px solid #268022;
+  border-right: 1px solid #030c02;
+  border-bottom: 1px solid transparent;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+}
+.preloader__circle-line--1 {
+  width: 180px;
+  height: 180px;
+  animation-duration: 1s;
+}
+.preloader__circle-line--2 {
+  width: 160px;
+  height: 160px;
+  animation-duration: 2s;
+}
+.preloader__circle-line--3 {
+  width: 140px;
+  height: 140px;
+  animation-duration: 3s;
+}
+.preloader__circle-line--4 {
+  width: 120px;
+  height: 120px;
+  animation-duration: 4s;
+}
+.preloader__circle-line--5 {
+  width: 100px;
+  height: 100px;
+  animation-duration: 5s;
+}
+.preloader__circle-line--6 {
+  width: 80px;
+  height: 80px;
+  animation-duration: 6s;
+}
+.preloader__circle-line--7 {
+  width: 60px;
+  height: 60px;
+  animation-duration: 7s;
+}
+.preloader__circle-line--8 {
+  width: 40px;
+  height: 40px;
+  animation-duration: 8s;
+}
+.preloader__circle-line--9 {
+  width: 20px;
+  height: 20px;
+  animation-duration: 9s;
+}
+.preloader__circle-line--10 {
+  width: 0px;
+  height: 0px;
+  animation-duration: 10s;
+}
+
+
+
+
+
+
+
+  
+
+
+
 #logo {
   width: auto; 
   height: 30px; 
@@ -94,7 +231,10 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   
 }
 .jumbotron {
-  background-color: #fff;
+  background-color: transparent;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 1px;
 }
 
 .item .item-wrap img {
@@ -167,7 +307,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 --------------------------------------------------------------*/
 /* Custom Navmenu */
 .custom-navmenu {
-  background: #0d1e2d;
+  background: #0e0d0d;
 }
 
 .custom-navmenu .custom-menu, .custom-navmenu .custom-menu li {
@@ -179,6 +319,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 .custom-navmenu .custom-menu li {
   margin-bottom: 0;
   font-size: 20px;
+  padding: 3px;
 }
 
 .custom-navmenu .custom-menu li a {
@@ -213,7 +354,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 
 /* Custom Navbar */
 .custom-navbar {
-  padding-top: 50px;
+  padding-top: 30px;
   width: 100%;
 }
 
