--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,134 +1,139 @@
 
 body {
-    font-family: "Noto Sans TC", sans-serif;
-    color: #0d1e2d;
-    background: linear-gradient(-45deg, #c1e6b8, #2b593e, #6cc2d1, #0b093f);
-    background-size: 400% 400%;
-    animation: gradient 10s ease infinite;
-    line-height: 1;
-    overflow-y: scroll;
-    
+  font-family: "Noto Sans TC", sans-serif;
+  color: #0d1e2d;
+  background: linear-gradient(-45deg, #c1e6b8, #2b593e, #6cc2d1, #0b093f);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  line-height: 1;
+  overflow-y: auto;
+  margin:0px auto;
+  padding:0px;
+  overflow-y: scroll;
 }
 
 @keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+  0% {
+      background-position: 0% 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 50%;
+  }
+}
+#footerrow {
+padding-top: 1px;
 }
 
 .loader {
-  height: 100%;
-  width: 100%;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
+height: 100%;
+width: 100%;
+display: -ms-flexbox;
+display: -webkit-box;
+display: flex;
+-ms-flex-align: center;
+-ms-flex-pack: center;
+-webkit-box-align: center;
+align-items: center;
+-webkit-box-pack: center;
+justify-content: center;
 }
 
 @keyframes rotate {
-  from {
-    transform: translate(-50%, -50%) rotate(0);
- }
-  to {
-    transform: translate(-50%, -50%) rotate(360deg);
- }
+from {
+  transform: translate(-50%, -50%) rotate(0);
+}
+to {
+  transform: translate(-50%, -50%) rotate(360deg);
+}
 }
 .preloader {
-  height: 100vh;
-  width: 100vw;
-  background: #e0f8e8;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 99;
+height: 100vh;
+width: 100vw;
+background: #e0f8e8;
+position: fixed;
+top: 0;
+left: 0;
+z-index: 99;
 }
 .preloader__wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 200px;
-  height: 200px;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 200px;
+height: 200px;
 }
 .preloader__circle {
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-  z-index: 99;
-  position: relative;
-  transition: 0.3s ease;
+width: 100%;
+height: 100%;
+display: inline-block;
+z-index: 99;
+position: relative;
+transition: 0.3s ease;
 }
 .preloader__circle-line {
-  animation: rotate 3.5s ease-in-out infinite;
-  border-top: 1px solid transparent;
-  border-left: 1px solid #268022;
-  border-right: 1px solid #030c02;
-  border-bottom: 1px solid transparent;
-  border-radius: 50%;
-  position: absolute;
-  left: 50%;
-  top: 50%;
+animation: rotate 3.5s ease-in-out infinite;
+border-top: 1px solid transparent;
+border-left: 1px solid #268022;
+border-right: 1px solid #030c02;
+border-bottom: 1px solid transparent;
+border-radius: 50%;
+position: absolute;
+left: 50%;
+top: 50%;
 }
 .preloader__circle-line--1 {
-  width: 180px;
-  height: 180px;
-  animation-duration: 1s;
+width: 180px;
+height: 180px;
+animation-duration: 1s;
 }
 .preloader__circle-line--2 {
-  width: 160px;
-  height: 160px;
-  animation-duration: 2s;
+width: 160px;
+height: 160px;
+animation-duration: 2s;
 }
 .preloader__circle-line--3 {
-  width: 140px;
-  height: 140px;
-  animation-duration: 3s;
+width: 140px;
+height: 140px;
+animation-duration: 3s;
 }
 .preloader__circle-line--4 {
-  width: 120px;
-  height: 120px;
-  animation-duration: 4s;
+width: 120px;
+height: 120px;
+animation-duration: 4s;
 }
 .preloader__circle-line--5 {
-  width: 100px;
-  height: 100px;
-  animation-duration: 5s;
+width: 100px;
+height: 100px;
+animation-duration: 5s;
 }
 .preloader__circle-line--6 {
-  width: 80px;
-  height: 80px;
-  animation-duration: 6s;
+width: 80px;
+height: 80px;
+animation-duration: 6s;
 }
 .preloader__circle-line--7 {
-  width: 60px;
-  height: 60px;
-  animation-duration: 7s;
+width: 60px;
+height: 60px;
+animation-duration: 7s;
 }
 .preloader__circle-line--8 {
-  width: 40px;
-  height: 40px;
-  animation-duration: 8s;
+width: 40px;
+height: 40px;
+animation-duration: 8s;
 }
 .preloader__circle-line--9 {
-  width: 20px;
-  height: 20px;
-  animation-duration: 9s;
+width: 20px;
+height: 20px;
+animation-duration: 9s;
 }
 .preloader__circle-line--10 {
-  width: 0px;
-  height: 0px;
-  animation-duration: 10s;
+width: 0px;
+height: 0px;
+animation-duration: 10s;
 }
 
 
@@ -137,168 +142,171 @@ body {
 
 
 
-  
+
 
 
 
 #logo {
-  width: auto; 
-  height: 30px; 
-  padding-bottom: 6px;
-  
+width: auto; 
+height: 30px; 
+padding-bottom: 6px;
+
 
 }
 
 
 a {
-  color: #777;
+color: #777;
 }
 
 a:hover {
-  color: #000;
+color: #000;
 }
 
-h1, h2, h3, h4, h5, h6, .font-heading {
-  font-family: "Noto Sans TC", sans-serif;
+h1, h2, h3, h4, h5, h6, .font-heading, #footerrow{
+font-family: "Raleway", sans-serif;
 }
 
 .section {
-  padding: 1rem 0;
+padding: 1rem 0;
 }
 
 .filters a {
-  color: #000;
-  display: inline-block;
-  padding-left: 10px;
-  padding-right: 10px;
-  position: relative;
+color: #000;
+display: inline-block;
+padding-left: 10px;
+padding-right: 10px;
+position: relative;
 }
 
 .filters a:hover, .filters a:focus, .filters a:active {
-  text-decoration: none;
+text-decoration: none;
 }
 
 .filters a:hover:before {
-  content: "";
-  position: absolute;
-  left: 10px;
-  right: 10px;
-  bottom: 0;
-  height: 1px;
-  background-color: #000;
+content: "";
+position: absolute;
+left: 10px;
+right: 10px;
+bottom: 0;
+height: 1px;
+background-color: #000;
 }
 
 .filters a.active {
-  color: rgba(0, 0, 0, 0.309);
+color: rgba(0, 0, 0, 0.309);
 }
 
 .filters a.active:before {
-  content: "";
-  position: absolute;
-  left: 10px;
-  right: 10px;
-  bottom: 0;
-  height: 1px;
-  background-color: #000;
+content: "";
+position: absolute;
+left: 10px;
+right: 10px;
+bottom: 0;
+height: 1px;
+background-color: #000;
 }
 
 .item {
-  border: none;
-  padding-right: 6px;
-  padding-left: 6px;
+border: none;
+padding-right: 6px;
+padding-left: 6px;
 }
 
 .item .item-wrap {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  border-radius: 25px;
-  padding: 2px;
+display: block;
+position: relative;
+overflow: hidden;
+border-radius: 25px;
+padding: 2px;
 }
 
 .item .item-wrap:after {
-  z-index: 2;
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.665);
-  visibility: hidden;
-  opacity: 0;
-  transition: .3s all ease-in-out;
-  
+z-index: 2;
+position: absolute;
+content: "";
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background: rgba(0, 0, 0, 0.665);
+visibility: hidden;
+opacity: 0;
+transition: .3s all ease-in-out;
+
 }
 .jumbotron {
-  background-color: transparent;
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 1px;
+background-color: transparent;
+width: 100%;
+padding-top: 1px;
+padding-bottom: 1px;
+margin-bottom: -10px;
+margin-top: -15px;
+
 }
 
 .item .item-wrap img {
-  transition: .3s transform ease;
-  transform: scale(1);
-  border-radius: 25px;
-  
+transition: .3s transform ease;
+transform: scale(1);
+border-radius: 25px;
+
 }
 
 .item .item-wrap > .work-info {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  text-align: center;
-  z-index: 3;
-  transform: translateY(-50%);
-  color: #fff;
-  opacity: 0;
-  visibility: hidden;
-  margin-top: 20px;
-  transition: .3s all ease;
+position: absolute;
+top: 50%;
+width: 100%;
+text-align: center;
+z-index: 3;
+transform: translateY(-50%);
+color: #fff;
+opacity: 0;
+visibility: hidden;
+margin-top: 20px;
+transition: .3s all ease;
 }
 
 .item .item-wrap > .work-info h3 {
-  font-size: 20px;
-  margin-bottom: 0;
+font-size: 20px;
+margin-bottom: 0;
 }
 
 .item .item-wrap > .work-info span {
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: .2rem;
+font-size: 14px;
+text-transform: uppercase;
+letter-spacing: .2rem;
 }
 
 .item .item-wrap:hover {
-  text-decoration: none;
-  border-radius: 25px;
+text-decoration: none;
+border-radius: 25px;
 }
 
 .item .item-wrap:hover img {
-  transform: scale(1.05);
+transform: scale(1.05);
 }
 
 .item .item-wrap:hover:after {
-  opacity: 1;
-  visibility: visible;
+opacity: 1;
+visibility: visible;
 }
 
 .item .item-wrap:hover .work-info {
-  margin-top: 0px;
-  opacity: 1;
-  visibility: visible;
+margin-top: 0px;
+opacity: 1;
+visibility: visible;
 }
 
 .h3 {
-  font-size: 20px;
+font-size: 20px;
 }
 
 .h4 {
-  font-size: 16px;
+font-size: 16px;
 }
 
 .heading {
-  font-size: 28px;
+font-size: 28px;
 }
 
 
@@ -307,164 +315,182 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 --------------------------------------------------------------*/
 /* Custom Navmenu */
 .custom-navmenu {
-  background: #0e0d0d;
+background: #0e0d0d;
 }
 
 .custom-navmenu .custom-menu, .custom-navmenu .custom-menu li {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+padding: 0;
+margin: 0;
+list-style: none;
 }
 
 .custom-navmenu .custom-menu li {
-  margin-bottom: 0;
-  font-size: 20px;
-  padding: 3px;
+margin-bottom: 0;
+font-size: 20px;
+padding: 3px;
 }
 
 .custom-navmenu .custom-menu li a {
-  color: #fff;
-  padding: 10px 0 !important;
+color: #fff;
+padding: 10px 0 !important;
 }
 
 .custom-navmenu .custom-menu li a:hover {
-  text-decoration: none;
+text-decoration: none;
 }
 
 .custom-navmenu .custom-menu li.active a {
-  text-decoration: underline;
+text-decoration: underline;
 }
 
 .custom-navmenu h3 {
-  font-size: 20px;
-  color: #fff;
+font-size: 20px;
+color: #fff;
 }
 
 .custom-navmenu p {
-  color: rgba(255, 255, 255, 0.6);
+color: rgba(255, 255, 255, 0.6);
 }
 
 .custom-navmenu a {
-  color: rgba(255, 255, 255, 0.7);
+color: rgba(255, 255, 255, 0.7);
 }
 
 .custom-navmenu a:hover {
-  color: #fff;
+color: #fff;
 }
 
 /* Custom Navbar */
 .custom-navbar {
-  padding-top: 30px;
-  width: 100%;
+padding-top: 30px;
+width: 100%;
 }
 
 @media (max-width: 780px) {
-  .custom-navbar > .container {
-    padding-right: 0;
-    padding-left: 0;
-  }
+.custom-navbar > .container {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+body {
+overflow-y: hidden;
+}
 }
 
 .custom-navbar .navbar-brand {
-  font-size: 1.7rem;
+font-size: 1.7rem;
 }
 
 /* Burger */
 .burger {
-  width: 28px;
-  height: 32px;
-  cursor: pointer;
-  position: relative;
+width: 28px;
+height: 32px;
+cursor: pointer;
+position: relative;
 }
 
 .burger:before, .burger span, .burger:after {
-  width: 100%;
-  height: 2px;
-  display: block;
-  background: #000;
-  border-radius: 2px;
-  position: absolute;
-  opacity: 1;
+width: 100%;
+height: 2px;
+display: block;
+background: #000;
+border-radius: 2px;
+position: absolute;
+opacity: 1;
 }
 
 .burger:before, .burger:after {
-  transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
-  -webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
-  content: "";
+transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
+-webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
+content: "";
 }
 
 .burger:before {
-  top: 4px;
+top: 4px;
 }
 
 .burger span {
-  top: 15px;
+top: 15px;
 }
 
 .burger:after {
-  top: 26px;
+top: 26px;
 }
 
 /* Hover */
 .burger:hover:before {
-  top: 7px;
+top: 7px;
 }
 
 .burger:hover:after {
-  top: 23px;
+top: 23px;
 }
 
 /* Click */
 .burger.active span {
-  opacity: 0;
+opacity: 0;
 }
 
 .burger.active:before, .burger.active:after {
-  top: 40%;
+top: 40%;
 }
 
 .burger.active:before {
-  transform: rotate(45deg);
+transform: rotate(45deg);
 }
 
 .burger.active:after {
-  transform: rotate(-45deg);
+transform: rotate(-45deg);
 }
 
 .burger:focus {
-  outline: none;
+outline: none;
 }
 
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 .footer {
-  padding: 0 0 4rem 0;
+padding: 0 0 4rem 0;
 }
 
 .footer a {
-  color: #000;
+color: #000;
 }
 
 .social a {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background: #f8f9fa;
-  position: relative;
-  text-align: center;
-  color: #0d1e2d;
+display: inline-block;
+width: 35px;
+height: 35px;
+background: #ffffff;
+border-radius: 50%;
+position: relative;
+text-align: center;
+color: #0d1e2d;
 }
 
+
+.icofont-instagram {
+color: rgb(225,48,108);
+}
+.icofont-facebook {
+color: #3b5998;
+
+}
+
+
 .social a span {
-  display: inline-block;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
+display: inline-block;
+left: 50%;
+position: absolute;
+top: 50%;
+transform: translate(-50%, -50%);
 }
 
 .social a:hover {
-  color: #000;
+color: #000;
+}
+
+@media screen {
+
 }
