--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -451,7 +451,13 @@ outline: none;
 # Footer
 --------------------------------------------------------------*/
 .footer {
-padding: 0 0 4rem 0;
+ /*padding: 0 0 4rem 0;*/
+ position:absolute;
+ bottom:0;
+ width:100%;
+ height:80px;   /* Height of the footer */
+ background:transparent;
+}
 }
 
 .footer a {
