--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     background: linear-gradient(-45deg, #c1e6b8, #2b593e, #6cc2d1, #0b093f);
     background-size: 400% 400%;
     animation: gradient 10s ease infinite;
-    line-height: 1;
+    line-height: 1.3;
     margin:0px auto;
     padding:0px;
     overflow-y: scroll;
@@ -162,7 +162,7 @@ a:hover {
   color: #000;
 }
 
-h1, h2, h3, h4, h5, h6, .font-heading, #footerrow{
+h1, h2, h3, h4, h5, h6, p, .font-heading, #footerrow{
   font-family: "Raleway", sans-serif;
 }
 
