--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,19 +147,19 @@ body {
 
 #logo {
   width: auto; 
-  height: 30px; 
-  padding-bottom: 6px;
+  height: 35px; 
+  padding-bottom: 10px;
   
 
 }
 
 
 a {
-  color: #777;
+  color: rgb(204, 204, 204);
 }
 
 a:hover {
-  color: #000;
+  color: rgb(255, 255, 255);
 }
 
 h1, h2, h3, h4, h5, h6, p, .font-heading, #footerrow{
@@ -320,133 +320,171 @@ h1, h2, h3, h4, h5, h6, p, .font-heading, #footerrow{
 # Header
 --------------------------------------------------------------*/
 /* Custom Navmenu */
-.custom-navmenu {
-  background: #0e0d0d;
+dl, ol, ul {
+  margin-top: 40px;
+  margin-bottom: 1rem;
 }
 
-.custom-navmenu .custom-menu, .custom-navmenu .custom-menu li {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+#navbar {
+  margin-top: 0px;
 }
 
-.custom-navmenu .custom-menu li {
-  margin-bottom: 0;
-  font-size: 20px;
-  padding: 3px;
+.navbar-brand {
+  display: inline-block;
+  padding-top: 0px;
+  padding-bottom: 1rem;
+  margin-right: 1rem;
+  font-size: 1.8rem;
+  line-height: inherit;
+  white-space: nowrap;
+  margin-left: -60px;
 }
 
-.custom-navmenu .custom-menu li a {
-  color: #fff;
-  padding: 10px 0 !important;
+.navbar-light .navbar-brand {
+  color: rgba(0,0,0,.9);
+  margin-top: 13px;
 }
 
-.custom-navmenu .custom-menu li a:hover {
-  text-decoration: none;
-}
-
-.custom-navmenu .custom-menu li.active a {
-  text-decoration: underline;
-}
-
-.custom-navmenu h3 {
-  font-size: 20px;
-  color: #fff;
-}
-
-.custom-navmenu p {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.custom-navmenu a {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.custom-navmenu a:hover {
-  color: #fff;
-}
-
-/* Custom Navbar */
-.custom-navbar {
-  padding-top: 15px;
-  width: 100%;
-}
-
-@media (max-width: 780px) {
-  .custom-navbar > .container {
-    padding-right: 0;
-    padding-left: 0;
+@media (max-width: 1920px) {
+  .navbar-brand {
+    
+    margin-left: -300px;
   }
+  
+}
+@media (max-width: 1440px) {
+  .navbar-brand {
+    
+    margin-left: -100px;
+  }
+ 
+}
+@media (max-width: 1366px) {
+  .navbar-brand {
+    
+    margin-left: -60px;
+  }
+ 
+}
+@media (max-width: 1200px) {
+  .navbar-brand {
+    
+    margin-left: -15px;
+  }
+ 
 }
 
-.custom-navbar .navbar-brand {
-  font-size: 1.7rem;
+@media (max-width: 991px) {
+  .navbar-brand {
+   
+    margin-left: -30px;
+  }
+ 
+}
+@media (max-width: 768px) {
+  .navbar-brand {
+    
+    margin-left: -50px;
+  }
+ 
+}
+@media (max-width: 575px) {
+  .navbar-brand {
+    
+    margin-left: -20px;
+  }
+ 
 }
 
-/* Burger */
-.burger {
-  width: 28px;
-  height: 32px;
-  cursor: pointer;
-  position: relative;
-}
 
-.burger:before, .burger span, .burger:after {
+input + label {
+  position: fixed;
+  top: 30px;
+  right: 40px;
+  height: 20px;
+  width: 15px;
+  z-index: 5;
+  
+}
+input + label span {
+  position: absolute;
   width: 100%;
   height: 2px;
+  top: 50%;
+  margin-top: -1px;
+  left: 0;
   display: block;
-  background: #000;
-  border-radius: 2px;
-  position: absolute;
-  opacity: 1;
+  background: #020304;
+  transition: .5s;
+  color: #000;
+  
 }
-
-.burger:before, .burger:after {
-  transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
-  -webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
-  content: "";
+input + label span:first-child {
+  top: 3px;
 }
-
-.burger:before {
-  top: 4px;
+input + label span:last-child {
+  top: 16px;
 }
-
-.burger span {
-  top: 15px;
+label:hover {
+  cursor: pointer;
 }
-
-.burger:after {
-  top: 26px;
-}
-
-/* Hover */
-.burger:hover:before {
-  top: 7px;
-}
-
-.burger:hover:after {
-  top: 23px;
-}
-
-/* Click */
-.burger.active span {
+input:checked + label span {
   opacity: 0;
+  top: 50%;
 }
-
-.burger.active:before, .burger.active:after {
-  top: 40%;
+input:checked + label span:first-child {
+  opacity: 1;
+  transform: rotate(405deg);
 }
-
-.burger.active:before {
-  transform: rotate(45deg);
+input:checked + label span:last-child {
+  opacity: 1;
+  transform: rotate(-405deg);
 }
-
-.burger.active:after {
-  transform: rotate(-45deg);
+input ~ nav {
+  -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(25px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 3;
+  transition: .5s;
+  transition-delay: .5s;
+  overflow: hidden;
 }
-
-.burger:focus {
-  outline: none;
+input ~ nav > ul {
+  text-align: center;
+  position: absolute;
+  top: 35%;
+  left: 20%;
+  right: 20%;
+}
+input ~ nav > ul > li {
+  opacity: 0;
+  transition: .5s;
+  transition-delay: 0s;
+  list-style-type: none;
+}
+input ~ nav > ul > li > a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #020304;
+  font-weight: 700;
+  font-family: sans-serif;
+  display: block;
+  padding: 30px;
+}
+input ~ nav > ul > li > a:hover{
+  color: grey;
+}
+input:checked ~ nav {
+  height: 100%;
+  transition-delay: 0s;
+}
+input:checked ~ nav > ul > li {
+  opacity: 1;
+  transition-delay: .5s;
 }
 
 /*--------------------------------------------------------------
