--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,95 @@ h1, h2, h3, h4, h5, h6, p, .font-heading, #footerrow{
   padding: 1rem 0;
 }
 
+.section-team {
+	font-family: "Poppins", sans-serif;
+	padding: 10px 0;
+  
+}
+
+.section-team .header-section {
+	margin-bottom: 50px;
+  
+}
+
+
+
+.section-team .header-section .title {
+    font-weight: 700;
+    font-size: 45px;
+}
+
+.section-team .single-person {
+	margin-top: 30px;
+	padding: 30px;
+	border-radius: 20px;
+  background: #e0f8e896;
+  box-shadow:  20px 20px 62px #bdbdbd70,
+             -20px -20px 62px #ffffff75;
+}
+
+.section-team .single-person:hover {
+	background: linear-gradient(to right, #09cf13b0, #17b34bb2);
+}
+
+.section-team .single-person .person-image {
+    position: relative;
+    margin-bottom: 50px;
+    border-radius: 50%;
+    border: 4px dashed transparent;
+    transition: padding .3s;
+}
+
+.section-team .single-person:hover .person-image {
+	padding: 12px;
+    border: 4px dashed #fff;
+}
+
+.section-team .single-person .person-image img {
+	width: 100%;
+    border-radius: 50%;
+}
+
+.section-team .single-person .person-image .icon {
+	position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%,50%);
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    background: linear-gradient(to right, #09cf13, #17b34b);
+    color: #fff;
+    border-radius: 50%;
+    font-size: 24px;
+}
+
+.section-team .single-person:hover .person-image .icon {
+	background: none;
+	background-color: #fff;
+	color: #49b12a;;
+}
+
+.section-team .single-person .person-info .full-name {
+	margin-bottom: 10px;
+	font-size: 28px;
+    font-weight: 700;
+}
+
+.section-team .single-person .person-info .speciality {
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #000000;;
+}
+
+.section-team .single-person:hover .full-name,
+.section-team .single-person:hover .speciality {
+	color: #fff;
+}
+
+
 .filters a {
   color: #000;
   display: inline-block;
@@ -314,6 +403,10 @@ h1, h2, h3, h4, h5, h6, p, .font-heading, #footerrow{
 .heading {
   font-size: 28px;
 }
+
+
+
+
 
 
 /*--------------------------------------------------------------
