--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,7 @@ body {
   
     font-family: "Noto Sans TC", sans-serif;
     color: #0d1e2d;
-    background: linear-gradient(-45deg, #ffffff, #7bbd97, #469b4d, #4a8ce2);
-    background-size: 400% 400%;
-    animation: gradient 10s ease infinite;
+    background: #e0f8e8;
     line-height: 1.3;
     margin:0px auto;
     padding:0px;
@@ -155,7 +153,7 @@ body {
 
 
 a {
-  color: rgb(204, 204, 204);
+  color: rgb(219 224 224);
 }
 
 a:hover {
