--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,22 +143,10 @@ body {
 
 
 
-#logo {
-  width: auto; 
-  height: 35px; 
-  padding-bottom: 10px;
-  
-
-}
 
 
-a {
-  color: rgb(219 224 224);
-}
 
-a:hover {
-  color: rgb(255, 255, 255);
-}
+
 
 h1, h2, h3, h4, h5, h6, p, .font-heading, #footerrow{
   font-family: "Raleway", sans-serif;
@@ -411,6 +399,22 @@ h1, h2, h3, h4, h5, h6, p, .font-heading, #footerrow{
 # Header
 --------------------------------------------------------------*/
 /* Custom Navmenu */
+a {
+  color: azure;
+  }
+
+  a:hover {
+  color: #fff;
+  }
+
+
+#logo {
+  width: auto; 
+  height: 35px; 
+  padding-bottom: 10px;
+}
+
+
 dl, ol, ul {
   margin-top: 40px;
   margin-bottom: 1rem;
