--- a/assets/css/customNav.css
+++ b/assets/css/customNav.css
@@ -2,14 +2,9 @@ HTML {
   overflow: hidden;
 }
 body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  overflow: hidden;
-  font-family: "Poppins", sans-serif;
-  color: #1b1d1d;
+
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  
 }
 p {
   font-weight: 400;
@@ -18,10 +13,10 @@ a {
   transition: color 0.3s ease;
 }
 a:hover {
-  color: #fbb040 !important;
+  color: #afce37 !important;
 }
 ::selection {
-  background: #fbb040;
+  background: #afce37;
   color: #fff;
 }
 p,
@@ -280,6 +275,7 @@ table {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  
 }
 .modify-img.no-pos {
   position: relative;
@@ -311,7 +307,7 @@ input::-webkit-inner-spin-button {
   width: 100%;
   height: 2px;
   z-index: 9999;
-  background: #fbb040;
+  background: #afce37;
 }
 .pace-done .custom-loader img {
   display: none;
@@ -360,7 +356,7 @@ input::-webkit-inner-spin-button {
 }
 .dcLink:before {
   content: "";
-  background: #fbb040;
+  background: #afce37;
   height: 2px;
   width: 0;
   bottom: 0;
@@ -370,7 +366,7 @@ input::-webkit-inner-spin-button {
   transition: width 0.45s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 .dcLink:hover {
-  color: #fbb040 !important;
+  color: #afce37 !important;
 }
 .dcLink:hover:before {
   width: 100%;
@@ -379,7 +375,7 @@ input::-webkit-inner-spin-button {
   color: #1b1d1d;
 }
 .dcLink:focus:hover {
-  color: #fbb040;
+  color: #afce37;
 }
 .dcBtn {
   font-size: 16px;
@@ -406,10 +402,10 @@ input::-webkit-inner-spin-button {
   bottom: 0;
   top: 0;
   transition: width 0.6s cubic-bezier(0.85, 0, 0.15, 1);
-  background: #dc8b13;
+  background: #afce37;
 }
 .dcBtn:hover {
-  border-color: #fbb040 !important;
+  border-color: #afce37 !important;
 }
 .dcBtn:hover span {
   color: #fff !important;
@@ -471,7 +467,7 @@ input::-webkit-inner-spin-button {
 .nice-select:active,
 .nice-select.open,
 .nice-select:focus {
-  border-color: #fbb040;
+  border-color: #afce37;
 }
 .nice-select {
   height: 48px;
@@ -749,11 +745,11 @@ input::-webkit-inner-spin-button {
 }
 .MenuItems__items ul li a:hover {
   text-decoration: underline;
-  color: #000000 !important;
+  color: #afce37 !important;
 }
 .MenuItems__items ul li a.active {
   text-decoration: underline;
-  color: #000000;
+  color: #afce37;
 }
 .MenuItems__content {
   width: 300px;
@@ -863,7 +859,7 @@ input::-webkit-inner-spin-button {
 }
 .MenuItems .Startup_Banner__slider__notes__social .toggle-infoBtn p:hover,
 .MenuItems .Startup_Banner__slider__notes__social .toggle-infoBtn p.active {
-  background: #fbb040;
+  background: #afce37;
 }
 .MenuItems .Startup_Banner__slider__notes__social ul li {
   display: inline;
@@ -1161,50 +1157,7 @@ input::-webkit-inner-spin-button {
     display: none;
   }
 }
-.Footer__bottom {
-  height: 40%;
-  background: #231f20;
-  overflow: hidden;
-}
-.Footer__bottom-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 40px;
-}
-.Footer__bottom__left ul li {
-  display: inline-flex;
-}
-.Footer__bottom__left ul li a {
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 300;
-  margin-right: 40px;
-}
-.Footer__bottom__left ul li:nth-last-of-type(1) a {
-  margin-right: 0;
-}
-.Footer__bottom__right {
-  display: inline-flex;
-}
-.Footer__bottom__right a {
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 300;
-  margin-right: 31px;
-}
-.Footer__bottom__right p {
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 300;
-  margin: 0;
-}
-.noFooter .Footer {
-  display: none;
-}
-.noFooter .Startup-content {
-  height: calc(100vh - 120px);
-}
+
 @media (max-width: 768px) and (min-width: 768px) {
   .MenuBar .MenuBar-wrap {
     height: 98px;
@@ -1250,12 +1203,7 @@ input::-webkit-inner-spin-button {
   .MenuItems__items {
     padding-right: 15px;
   }
-  .Footer__bottom__left ul li a {
-    margin-right: 15px;
-  }
-  .Footer__bottom__right {
-    display: none;
-  }
+ 
   .Startup_Banner__slider__notes__icon {
     display: none;
   }
@@ -1421,7 +1369,7 @@ input::-webkit-inner-spin-button {
 }
 .Startup_Banner__slider__notes__social .toggle-infoBtn p:hover,
 .Startup_Banner__slider__notes__social .toggle-infoBtn p.active {
-  background: #fbb040;
+  background: #afce37;
 }
 .Startup_Banner__slider__notes__social ul li {
   display: inline;
@@ -1631,7 +1579,7 @@ input::-webkit-inner-spin-button {
   text-decoration: underline !important;
 }
 .Startup-content__left ul.leftMenu li.current-menu-item a {
-  color: #fbb040 !important;
+  color: #afce37 !important;
 }
 .MobileMenu__wrap__items ul li.current-menu-item a {
   color: #2855a8 !important;
@@ -1651,6 +1599,4 @@ input::-webkit-inner-spin-button {
   margin: auto;
   left: -80%;
 }
-.Footer__bottom-wrap {
-  justify-content: flex-end;
-}
+
